--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -37,7 +37,7 @@ jobs:
         west init -l .
         west update
         west zephyr-export
-        pip3 install -r zephyr/scripts/requirements.txt
+        pip3 install -r scripts/requirements.txt
 
     - name: Download Coverity Tool
       run: |
