--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -14,50 +14,51 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Cache west & modules
-      uses: actions/cache@v4
-      with:
-        path: |
-          .west
-          modules
-          zephyr
-          tools
-        key: ${{ runner.os }}-west-${{ hashFiles('west.yml') }}
-
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y cmake ninja-build gperf \
-          python3-pip python3-setuptools python3-wheel \
-          build-essential curl git
-
-    - name: Setup Zephyr & NCS
-      run: |
+        sudo apt install -y build-essential cmake ninja-build python3-pip git curl
         pip3 install west
+        pip3 install -r scripts/requirements.txt
+
+    - name: Initialize NCS workspace
+      run: |
         west init -l .
         west update
         west zephyr-export
-        pip3 install -r scripts/requirements.txt
 
-    - name: Download Coverity Tool
+    - name: Download Coverity tool
       run: |
-        mkdir -p coverity
+        mkdir coverity
         curl -L "https://scan.coverity.com/download/linux64" \
           --data "token=${{ secrets.COVERITY_TOKEN }}&project=${{ secrets.COVERITY_PROJECT_NAME }}" \
           -o coverity_tool.tgz
         tar -xzf coverity_tool.tgz -C coverity --strip-components=1
-        echo "$GITHUB_WORKSPACE/coverity/bin" >> $GITHUB_PATH
 
-    - name: List folders
-      run: ls -R
-      
-    - name: Build with Coverity
+    - name: Build with Coverity capture
       run: |
+        export PATH=$PATH:$GITHUB_WORKSPACE/coverity/bin
         cov-build --dir cov-int \
           west build -p -b nrf54l15dk/nrf54l10/cpuapp \
           -d build \
           -s applications/nrf_desktop \
           -- -DSYSBUILD=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
-    - name: Submit to Coverity Scan
+
+    - name: Compress results
+      run: tar czvf cov-int.tgz cov-int || true
+
+    - name: Upload build log (for debug)
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverity-build-log
+        path: cov-int/build-log.txt
+
+    - name: Submit analysis to Coverity
       run: |
-        tar czvf
+        curl --form token=${{ secrets.COVERITY_TOKEN }} \
+             --form email=you@example.com \
+             --form file=@cov-int.tgz \
+             --form version="ncs-$(date +'%Y%m%d')" \
+             --form description="NCS project CI Coverity scan" \
+             https://scan.coverity.com/builds?project=${{ secrets.COVERITY_PROJECT_NAME }}
