--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y build-essential cmake ninja-build python3-pip git curl
+        sudo apt install -y build-essential cmake ninja-build gperf \
+          python3-pip python3-setuptools python3-wheel git curl
         pip3 install west
         pip3 install -r scripts/requirements.txt
 
@@ -34,15 +35,18 @@ jobs:
           --data "token=${{ secrets.COVERITY_TOKEN }}&project=${{ secrets.COVERITY_PROJECT_NAME }}" \
           -o coverity_tool.tgz
         tar -xzf coverity_tool.tgz -C coverity --strip-components=1
+        echo "$GITHUB_WORKSPACE/coverity/bin" >> $GITHUB_PATH
 
     - name: Build with Coverity capture
       run: |
         export PATH=$PATH:$GITHUB_WORKSPACE/coverity/bin
+        export APP_DIR=$GITHUB_WORKSPACE/applications/nrf_desktop
         cov-build --dir cov-int \
-          west build -p -b nrf54l15dk/nrf54l10/cpuapp \
+          west build -p \
           -d build \
-          -s applications/nrf_desktop \
-          -- -DSYSBUILD=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
+          -b nrf54l15dk_nrf54l10_cpuapp \
+          $APP_DIR \
+          -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DSYSBUILD=OFF
 
     - name: Compress results
       run: tar czvf cov-int.tgz cov-int || true
@@ -57,7 +61,7 @@ jobs:
     - name: Submit analysis to Coverity
       run: |
         curl --form token=${{ secrets.COVERITY_TOKEN }} \
-             --form email=you@example.com \
+             --form email=savage.lin@gmail.com \
              --form file=@cov-int.tgz \
              --form version="ncs-$(date +'%Y%m%d')" \
              --form description="NCS project CI Coverity scan" \
