--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -27,7 +27,14 @@ jobs:
         west init -l .
         west update
         west zephyr-export
-
+        
+    - name: Install Zephyr SDK
+      run: |
+        wget https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.4/zephyr-sdk-0.16.4_linux-x86_64.tar.xz
+        tar xvf zephyr-sdk-0.16.4_linux-x86_64.tar.xz
+        mv zephyr-sdk-0.16.4 $HOME/zephyr-sdk
+        $HOME/zephyr-sdk/setup.sh -t all -h
+        
     - name: Download Coverity tool
       run: |
         mkdir coverity
@@ -36,21 +43,21 @@ jobs:
           -o coverity_tool.tgz
         tar -xzf coverity_tool.tgz -C coverity --strip-components=1
         echo "$GITHUB_WORKSPACE/coverity/bin" >> $GITHUB_PATH
-        
+
     - name: Build with Coverity capture
       run: |
         export PATH=$PATH:$GITHUB_WORKSPACE/coverity/bin
-        export APP_DIR=$GITHUB_WORKSPACE/applications/nrf_desktop
+        export ZEPHYR_TOOLCHAIN_VARIANT=zephyr
+        export ZEPHYR_SDK_INSTALL_DIR=$HOME/zephyr-sdk
         mkdir -p build_54l10
         cd build_54l10
-
-        cmake -GNinja -DBOARD=nrf54l15dk/nrf54l10/cpuapp \
+        cmake -GNinja -DBOARD=nrf54l15dk_nrf54l10_cpuapp \
               -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
               -DSYSBUILD=OFF \
-              $APP_DIR
-
+              ../applications/nrf_desktop
         cd ..
         cov-build --dir cov-int ninja -C build_54l10
+  
 
    
     - name: Compress results
